--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
+    "next-intl": "^4.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
