--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^15.2.4",
     "next-intl": "^4.0.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
