--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@heroui/card": "^2.2.16",
     "@heroui/system": "^2.4.13",
     "@heroui/theme": "^2.4.13",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
@@ -30,7 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "prisma": "^6.8.2",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
