--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,11 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_HOST: ${DATABASE_HOST}
-      POSTGRES_USER: ${DATABASE_USER}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: scmc
+      POSTGRES_PASSWORD: scmc_password
+      POSTGRES_DB: scmc_database
     ports:
-      - "16191:16191"
+      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
   pgadmin:
